fix: a minor row wrapping issue & implement drag drop for week and day view

--- a/src/app/calendar/components/calendar-view/calendar-view.component.scss
+++ b/src/app/calendar/components/calendar-view/calendar-view.component.scss
@@ -48,6 +48,11 @@
   grid-template-columns: repeat(7, 1fr);
 }
 
+/* Week View specific header */
+.week-header {
+  grid-template-columns: 60px repeat(7, 1fr);
+}
+
 .weekday {
   text-align: center;
   font-weight: 500;
